--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^3.14.0",
     "next": "12.1.4",
-    "next-auth": "^4.3.1",
+    "next-auth": "^4.3.4",
+    "node-jose": "^2.1.1",
+    "node-jose-tools": "^0.9.3",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4"
+    "eslint-config-next": "12.1.4",
+    "prisma": "^3.14.0"
   }
 }
